src/Input/index.scss
@import '../variables';

%label {
    top: -20px;
    font-size: 14px;
    color: $main-700;
    outline: 0;
    opacity: 1;
}

.materialInput {
    position: relative;
    margin: 20px 0 35px;
    transition: margin 0.3s;

    .input {
        display: block;
        width: 100%;
        min-height: 23px;
        padding: 10px 10px 10px 5px;
        font-family: inherit;
        font-size: 18px;
        border: 0;
        border-bottom: 1px solid #757575;
        outline: 0;
        box-shadow: none;

        &:focus {
            ~ label {
                @extend %label;
            }
            ~ .bar {
                &:before,
                &:after {
                    width: 50%;
                }
            }
            ~ .highlight {
                animation: inputHighlighter 0.3s ease;
            }
        }
        &:required {
            &:valid {
                ~ label {
                    @extend %label;
                }
            }
        }
    }
    textarea {
        &.input {
            resize: vertical;
        }
    }

    &:not(.empty) {
        .input  ~ label {
            @extend %label;
        }
    }


    label {
        position: absolute;
        top: 10px;
        left: 5px;
        font-size: 18px;
        font-weight: normal;
        color: #000;
        pointer-events: none;
        opacity: 0.38;
        transition: 0.2s opacity, 0.2s top, color 0.2s, font-size 0.2s;
    }

    .bar {
        position: relative;
        display: block;
        width: 100%;

        &:before,
        &:after {
            position: absolute;
            bottom: 1px;
            width: 0;
            height: 2px;
            background: $main-700;
            content: '';
            transition: width 0.5s, color 0.2s;
        }
        &:before {
            left: 50%;
        }
        &:after {
            right: 50%;
        }
    }

    .highlight {
        position: absolute;
        top: 25%;
        left: 0;
        width: 100px;
        height: 60%;
        pointer-events: none;
        opacity: 0.5;
    }

    .message {
        margin-top: 5px;
        font-size: 14px;
        line-height: 14px;
        text-align: left;
        opacity: 0;
        transition: opacity 0.2s, color 0.2s;
    }

    &.error {
        margin-bottom: 45px;

        .bar {
            &:after,
            &:before {
                width: 50%;
                background: $red-500;
            }
        }
        .message {
            color: $red-500;
            opacity: 1;
        }
    }
}

